new xp fixes
